Introduced Embedded Template Library. Refactored code. Added terminator character.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,5 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps = etlcpp/Embedded Template Library@^20.38.2
+build_flags = -D ETL_NO_STL
